syntax = "proto3";

option go_package = "https://github.com/By6lik/otus_go_homework/project/banners";
import "google/protobuf/empty.proto";


package banners;




// слот ID
message SlotId {
  int64 id = 1;
}

// слот
message Slot {
  int64 slot_id = 1;
  string description = 2;
}

//баннер ID
message BannerId {
  int64 id = 1;
}

// баннер
message Banner {
  int64 banner_id = 1;
  string description = 2;
}


message UserGroupsId {
  int64 id = 1;
}
// Соц-дем. группа пользователей
message UserGroups {
  int64 user_groups_id = 1;
  string description = 2;
}



service Rotator {
  // Добавить баннер
  rpc AddBanner (SlotBanner) returns (google.protobuf.Empty) {}
  
  // Удалить баннер
  rpc RemoveBanner (BannerSlot) returns (google.protobuf.Empty) {}

  // Удалить баннер
  rpc RemoveBanner1 (SlotBanner) returns (google.protobuf.Empty) {}

  // //Засчитать переход
  rpc  CountLinkClick(SlotBannerUser) returns (google.protobuf.Empty) {}

  // //Выбрать баннер для показа
  rpc  SelectBanner(UserGroupBanner) returns (BannerId) {}
}

// слот баннера
message SlotBanner {
  int64 banner_id = 1;
  int64 slot_id = 2;
}

// слот баннера -- not needed
message BannerSlot {
  int64 slot_id = 1;
  int64 banner_id = 2;
}

message SlotBannerUser {
  int64 slot_banner = 1;
  int64 user_group_id = 2;
}

message UserGroupBanner {
  int64 slot_id = 1;
  int64 user_groups_id = 2;
}
